# Taxonomy_Tagger

./: .gitignore  .replit  README.md  confidence_scorer.py  config.yaml  document_processor.py  llm_client.py  main.py  pyproject.toml  requirements.txt  tag_assigner.py  taxonomy_analyzer.py  vector_store.py
attached_assets/: Taxonomy_1758125169756.json
input_documents/: business_requirements_document.docx  corporate_security_policy.txt  employee_training_manual.docx  financial_audit_report.txt  large_sap_implementation_guide.txt  project_charter.txt  sample_policy_document.txt  technical_specification.txt
